--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -56,6 +57,27 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
+    </section>
+    <section class="tweet-section">
+      <article class="tweet">
+        <header class="tweet-header">
+          <div>
+            <p>Jordan</p>
+          </div>
+          <p>@JordanPeterson</p>
+        </header>
+        <section class="tweet-body">
+          <p>An example tweet's text, Lorem ipsum or something like that in the whole universe and beyond</p>
+        </section>
+        <footer class="tweet-footer-container">
+          <p class="time-created">10 days ago</p>
+            <div class="icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+        </footer>
+      </article>
     </section>
   </body>
 </html>
