index with createTweetElement

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <main class="container"></main>
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form>
+      <form id="tweet-target">
         <label for="tweet-text"></label>
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div class="tweet-footer">
@@ -58,13 +58,11 @@
         </div>
       </form>
     </section>
-    <section class="tweet-section">
-      <article class="tweet">
+    <section id="tweets-container">
+      <!-- <article class="tweet">
         <header class="tweet-header">
-          <div>
-            <p>Jordan</p>
-          </div>
-          <p>@JordanPeterson</p>
+          <span> <img class="avatar" src="https://i.imgur.com/73hZDYK.png" alt="profile-picture"/> Jordan </span>
+          <h3>@JordanPeterson</h3>
         </header>
         <section class="tweet-body">
           <p>An example tweet's text, Lorem ipsum or something like that in the whole universe and beyond</p>
@@ -77,7 +75,7 @@
               <i class="fas fa-heart"></i>
             </div>
         </footer>
-      </article>
+      </article> -->
     </section>
   </body>
 </html>
