--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,14 @@
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  
+    
+  
   </head>
 
   <body>
@@ -49,8 +53,8 @@
     <main class="container"></main>
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form id="tweet-target">
-        <label for="tweet-text"></label>
+      <form action="/tweets" method="POST"  id="tweet-target">
+        <!-- <label for="tweet-text">Write a tweet</label> -->
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div class="tweet-footer">
           <button type="submit">Tweet</button>
@@ -58,24 +62,7 @@
         </div>
       </form>
     </section>
-    <section id="tweets-container">
-      <!-- <article class="tweet">
-        <header class="tweet-header">
-          <span> <img class="avatar" src="https://i.imgur.com/73hZDYK.png" alt="profile-picture"/> Jordan </span>
-          <h3>@JordanPeterson</h3>
-        </header>
-        <section class="tweet-body">
-          <p>An example tweet's text, Lorem ipsum or something like that in the whole universe and beyond</p>
-        </section>
-        <footer class="tweet-footer-container">
-          <p class="time-created">10 days ago</p>
-            <div class="icons">
-              <i class="fas fa-flag"></i>
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-heart"></i>
-            </div>
-        </footer>
-      </article> -->
-    </section>
+    
+    <section id="tweets-container"></section>
   </body>
 </html>
