index.html form Validation

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <!-- <label for="tweet-text">Write a tweet</label> -->
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div class="tweet-footer">
-          <button type="submit">Tweet</button>
+          <button id="submit "type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
