Tweeter app ready

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
     <article id="layout"> 
       <header id="user-profile">
         <div class="background">
-            <img src="/images/profile-hex.png"> 
+            <img src="/images/tweeter-profile.png"> 
         </div>
         <br>
         <div>
-            <h2>Your Name</h2>
+            <h2>@porchsal</h2>
         </div>
       </header>
       
